aws-app-mesh/gateway/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gw
  labels:
    name: ingress-gw
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:accountNo:certificate/cert-Id
    alb.ingress.kubernetes.io/group.name: <ingress group name>
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    external-dns.alpha.kubernetes.io/hostname: <hostname>
    external-dns.alpha.kubernetes.io/zone-type: private
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: <hostname>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ingress-gw
            port: 
              number: 80
  tls:
    - hosts:
      - <hostname>
